--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,7 @@ layout: default
           </div>
   	   {{ content }}
   	</div>
+<a href="{{ site.url }}{{ page.url }}">{{ site.url }}{{ page.url }}  </a>
 	</div>
 
 {% include new-old.html %}
