--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@ layout: default
 </div>
 
   <div class="post">
+  <blockquote><p>原文地址:<a href="{{ site.url }}{{ page.url }}">{{ site.url }}{{ page.url }}</a></p></blockquote>
         <div id="content">
           <div class ="sidebox">
               <div class ="sidebar">
@@ -42,7 +43,7 @@ layout: default
           </div>
   	   {{ content }}
   	</div>
-<a href="{{ site.url }}{{ page.url }}">{{ site.url }}{{ page.url }}  </a>
+	
 	</div>
 
 {% include new-old.html %}
