--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   </title>
   <link rel="stylesheet" href="../css/site.css">
   
+  
   <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   {% if page.description %}<meta name="description" content="{{page.description}}" />{% endif %}
@@ -149,8 +150,17 @@
       </li>
     </ul-->
   </footer>
+ 
+  
+ 
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+
+
+<!-- Bootstrap Core JavaScript -->
+
+ {% include search.html %}
 
 
 </body>
