--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,7 +153,7 @@
   </footer>
  
 
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='/js/jquery.min.js'></script>
 <!-- Bootstrap Core JavaScript -->
 
  {% include search.html %}
