--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,6 +86,16 @@ layout: default
 	-->
 <!-- Disqus Comment END -->
 
+<!--高速版-->
+<div id="SOHUCS" ></div>
+<script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>
+<script type="text/javascript">
+window.changyan.api.config({
+appid: 'cytG8rxFV',
+conf: 'prod_6c34a59919b8291dc2426f427348d5cd'
+});
+</script>
+
 </section>
 </div>
 
