--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,7 +77,7 @@ layout: default
 
 <!--PC版-->
 <div id="SOHUCS" ></div>
-<script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
+<script charset="utf-8" type="text/javascript" src="/js/changyan/changyan.js" ></script>
 <script type="text/javascript">
 window.changyan.api.config({
 appid: 'cytG8rxFV',
