--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,8 @@
 @import url("font.css");*,*:after,*:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:0;margin:0}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}
+
 .fancy, article {
-  /*font-family: 'lucida grande', 'lucida sans unicode', lucida, 'Helvetica Neue', helvetica, 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;*/
-  font-family: Georgia, "Linux Libertine",-apple-system,"Helvetica Neue",Helvetica,"Nimbus Sans L",Arial,"Liberation Sans","PingFang SC","Hiragino Sans GB","Source Han Sans CN","Source Han Sans SC","Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Zen Hei","ST Heiti",SimHei,"WenQuanYi Zen Hei Sharp",sans-serif;
+
+  font-family: Consolas,Georgia, "Linux Libertine",-apple-system,"Helvetica Neue",Helvetica,"Nimbus Sans L",Arial,"Liberation Sans","PingFang SC","Hiragino Sans GB","Source Han Sans CN","Source Han Sans SC","Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Zen Hei","ST Heiti",SimHei,"WenQuanYi Zen Hei Sharp",sans-serif;
   line-height: 170%;-webkit-user-select: none;-ms-user-select: none;-moz-user-select: none;user-select: none;
 
 }
@@ -64,7 +65,7 @@ a:hover {
 }
 
 h2 {
-    margin-top: 30px;
+    margin-top: 35px;
     margin-bottom: 30px;
 }
 
@@ -587,7 +588,7 @@ img[alt=drawing] { width: 60%; }
 }
 .post pre code{
     font-size:.9rem;  /*设置代码字体大小*/
-    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+    font-family: Menlo,Monaco,Consolas,"Courier New",Georgia,"Microsoft YaHei";
     border: none;
     line-height: 170%;
 }
@@ -597,7 +598,7 @@ img[alt=drawing] { width: 60%; }
   background-color: #F4F4F4;
   border: 1px solid #eee;
   padding: 0 .2em;
-  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  font-family: Menlo,Monaco,Consolas,"Courier New",Georgia,"Microsoft YaHei";
   border-radius: 4px;
 }
 
