--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,10 +113,10 @@
     </p-->
     <p>
       Made with <a href="http://jekyllrb.com/">Jekyll</a>,
-      hosted on Github Pages</a>. Inspired by <a href="http://sebastien.saunier.me/">saunier</a>, designed by <a href="http://yongyuan.name">Willard</a>.
+      hosted on Tencent Cloud</a>. 
     </p>
     <p>
-      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Attribution-NonCommercial-ShareAlike 4.0 International</a> 2013-2018
+      <a href="">Nansheng.Su Blog</a> 2018-2018
     </p>
     <!--ul class="links">
       <li>
