--- a/css/site.css
+++ b/css/site.css
@@ -144,10 +144,13 @@ nav a.selected:hover {
 }
 
 
-h1, .h1, h2, .h2, h3, .h3 {
-    margin-top: 20px;
+h1, .h1, h2, .h2, h3, .h3 , h4 ,.h4 {
+    margin-top: 25px;
     margin-bottom: 10px;
 }
+
+
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1.1;
 }
