--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       
 
   </title>
-  <link rel="stylesheet" href="../css/site.css">
+  <link rel="stylesheet" href="/css/site.css">
 
   
   <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
@@ -74,7 +74,7 @@
 	      <!--<a href="/yuanyong_resume_cn.pdf">Resume</a>
 	      <a href="/YongYuan_resume.pdf">Resume</a>-->
         <!--<a class="{% if page.category == 'publication' %} selected {% endif %}" href="/publication/">Publication</a>-->
-        <a class="{% if page.category == 'blog' %} selected {% endif %}" href="/">Blog</a>
+        <a class="{% if page.category == 'blog' %} selected {% endif %}" href="/blog/">Blog</a>
 	    <!--  <a href="/books/">Book</a>
 		    <a href="/timeline/">Times</a>
         <a href="https://github.com/willard-yuan">GitHub</a>-->
