--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="../css/blog.css">
+<link rel="stylesheet" href="/css/blog.css">
 
 {% if page.photo %}
 <div class="post-photo" style="background-image: url('/images/posts/{{ page.photo }}')">
@@ -25,7 +25,7 @@ layout: default
   	<i class="space"></i>
   	<i class="fa fa-tags"></i>
   	{% for tag in page.tags %}
-  	    <a class="tag" href="{{ site.url }}/tag/#{{ tag }}">{{ tag }}</a>
+  	    <a class="tag" href="">{{ tag }}</a>
   	    <i class="space"></i>
   	{% endfor %}
   	<i class="space"></i> 字数:{{page.content | size |divided_by:2}}
