--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,11 +112,11 @@
         Utils: <a href="http://rogerioferis.com/VisualRecognitionAndSearch2014/Resources.html">rogerioferis</a>&nbsp&nbsp&nbsp&nbsp<a href="http://caffe.berkeleyvision.org/">Caffe</a>&nbsp&nbsp&nbsp&nbsp<a href="http://scikit-learn.org/stable/index.html">scikit-learn</a>&nbsp&nbsp&nbsp&nbsp<a href="http://www.astroml.org/index.html">AstroML</a></a>&nbsp&nbsp&nbsp&nbsp<a href="http://scikit-image.org/">scikit-image</a></a>&nbsp&nbsp&nbsp&nbsp<a href="http://gitxiv.com/">GitXiv</a>
     </p-->
     <p>
-      Made with <a href="http://jekyllrb.com/">Jekyll</a>,
+      Generated with <a href="http://jekyllrb.com/">Jekyll</a>,
       hosted on Tencent Cloud</a>. 
     </p>
     <p>
-      <a href="">Nansheng.Su Blog</a> 2018-2018
+      <a href="">Nansheng.Su Blog</a> © 2018-2018
     </p>
     <!--ul class="links">
       <li>
